# plt2023

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Consts  Makefile  README.md  cmake_install.cmake  config.sh  run_test.sh
.github/workflows/: main.yml
ShadowHunter_Card/: Consts
Test_Thomas_Jeu/: Test_Drawing_Card  Test_Drawing_Card.cpp  Test_tour  Test_tour.cpp  Vision.cpp  classe.h
rapport/: Makefile  Rapport.odt  bestUML.dia  cmake_install.cmake
src/: ai.dia  engine.dia  main.cpp  render.dia  state.dia  state.h
src/client/: CMakeCache.txt  CMakeLists.txt  Exmple_Etat_Jeu.cpp  Makefile  cmake_install.cmake  main.cpp
src/shared/: CMakeLists.txt  Makefile  cmake_install.cmake
src/shared/state/: Board.cpp  CMakeCache.txt  CMakeLists.txt  Card.cpp  Character.cpp  Dark.cpp  Darknlight.cpp  DeckDark.cpp  DeckLight.cpp  DeckVision.cpp  Exemple.cpp  Game.cpp  Makefile  Observable.cpp  Observer.cpp  Player.cpp  Teams.cpp  Vision.cpp  main.cpp
src/state/: Board.h  Card.h  Card_type.h  Character .h  Class.h  Darknlight.h  DeckDark.h  DeckLight.h  DeckVision.h  Game.h  Player.h  Vision.h
test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/client/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_client_CardPosition.cpp  test_client_Const.cpp  test_client_Display.cpp  test_client_PlayerPosition.cpp  test_client_dummy  test_client_dummy.cpp
test/shared/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_shared_AttackCommand.cpp  test_shared_Board.cpp  test_shared_Card.cpp  test_shared_CardCommand.cpp  (+15 more)
(+14 files in other folders)
